tried to change checkbox css (failed) and tried to fix some of the stuff on the blog

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -64,3 +64,16 @@ hr.divider {
 .map-container iframe.clicked {
   pointer-events: auto;
 }
+
+
+h4 {
+  color:  #FDF5E6;
+}
+
+li {
+  color:  #FDF5E6;
+font-family: "Josefin Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-size: 1.25rem;
+}
+
+
